--- a/root/sber-start.html
+++ b/root/sber-start.html
@@ -7,9 +7,9 @@
     <style>
         :root {
             --primary-color: #b5e9ff;
-            --primary-light: #00c6cd;
-            --primary-dark: #6093f3;
-            --secondary-color: #ffffff;
+            --primary-light: #83ff9e;
+            --primary-dark: #f0f0f0;
+            --secondary-color: #000000;
             --text-dark: #000000;
             --text-light: #dfffb3;
             --shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -383,7 +383,7 @@
         }
         
         .user-message {
-            background-color: var(--secondary-color);
+            background-color: var(--primary-light);
             color: var(--text-dark);
             align-self: flex-end;
             margin-left: auto;
